--- a/GroceryList/View/Base.lproj/Main.storyboard
+++ b/GroceryList/View/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="9Lh-Kh-Sey">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,14 +18,14 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="shoppingCell" textLabel="dLQ-zx-GQ6" style="IBUITableViewCellStyleDefault" id="JE3-b2-aKG">
-                                <rect key="frame" x="0.0" y="24.5" width="414" height="43.5"/>
+                                <rect key="frame" x="0.0" y="24.333333969116211" width="414" height="43.666667938232422"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="JE3-b2-aKG" id="7cI-06-fPb">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.666667938232422"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="dLQ-zx-GQ6">
-                                            <rect key="frame" x="20" y="0.0" width="374" height="43.5"/>
+                                            <rect key="frame" x="20" y="0.0" width="374" height="43.666667938232422"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
                                             <nil key="textColor"/>
@@ -40,6 +41,18 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Grocery Shopping List" id="bPF-jP-Ip7">
+                        <leftBarButtonItems>
+                            <barButtonItem title="Item" image="info.circle.fill" catalog="system" id="ujZ-hP-O40">
+                                <connections>
+                                    <segue destination="LiT-x0-ihg" kind="show" identifier="infoLabel" id="hvc-7T-fRh"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem title="Item" image="trash.fill" catalog="system" id="Z7Y-gs-nlc">
+                                <connections>
+                                    <action selector="deleteAllItems:" destination="Iuc-RN-Lhe" id="NNp-J9-xVI"/>
+                                </connections>
+                            </barButtonItem>
+                        </leftBarButtonItems>
                         <barButtonItem key="rightBarButtonItem" title="Item" image="cart.badge.plus" catalog="system" id="LC3-9W-k7j">
                             <connections>
                                 <action selector="addNewItem:" destination="Iuc-RN-Lhe" id="gNL-Ph-QZf"/>
@@ -50,6 +63,67 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NDP-dR-aXc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="931.88405797101461" y="104.46428571428571"/>
+        </scene>
+        <!--Info View Controller-->
+        <scene sceneID="QcK-gw-gTz">
+            <objects>
+                <viewController id="LiT-x0-ihg" customClass="InfoViewController" customModule="GroceryList" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="L0l-Lk-23A">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pencil.and.outline" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="5WI-LC-Yc7">
+                                <rect key="frame" x="20" y="85.333333333333314" width="374" height="627.33333333333337"/>
+                                <color key="tintColor" red="0.97401255369186401" green="0.90482991933822632" blue="0.94985383749008179" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="374" id="PDI-We-Ie7"/>
+                                    <constraint firstAttribute="height" constant="623" id="Uym-7o-Kce">
+                                        <variation key="heightClass=compact-widthClass=compact" constant="323"/>
+                                        <variation key="heightClass=compact-widthClass=regular" constant="348.66666666666669"/>
+                                    </constraint>
+                                </constraints>
+                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large" weight="ultraLight"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kz8-qn-JqQ">
+                                <rect key="frame" x="20" y="88" width="374" height="623"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="623" id="Pj4-g3-Box">
+                                        <variation key="heightClass=compact-widthClass=compact" constant="323"/>
+                                        <variation key="heightClass=compact-widthClass=regular" constant="348"/>
+                                    </constraint>
+                                    <constraint firstAttribute="width" constant="374" id="t7d-Sv-k9I">
+                                        <variation key="heightClass=compact-widthClass=compact" constant="627"/>
+                                        <variation key="heightClass=compact-widthClass=regular" constant="776"/>
+                                        <variation key="heightClass=regular-widthClass=regular" constant="905"/>
+                                    </constraint>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Zapfino" family="Zapfino" pointSize="20"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="VMF-5h-bKo"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="5WI-LC-Yc7" firstAttribute="top" secondItem="Kz8-qn-JqQ" secondAttribute="top" id="2Wb-AI-psx"/>
+                            <constraint firstItem="Kz8-qn-JqQ" firstAttribute="centerX" secondItem="L0l-Lk-23A" secondAttribute="centerX" id="5EY-Cf-Usy">
+                                <variation key="heightClass=regular-widthClass=regular" constant="5.5"/>
+                            </constraint>
+                            <constraint firstItem="5WI-LC-Yc7" firstAttribute="leading" secondItem="Kz8-qn-JqQ" secondAttribute="leading" id="BOX-ZB-30u">
+                                <variation key="heightClass=compact-widthClass=compact" constant="127"/>
+                                <variation key="heightClass=compact-widthClass=regular" constant="201"/>
+                                <variation key="heightClass=regular-widthClass=regular" constant="260"/>
+                            </constraint>
+                            <constraint firstItem="Kz8-qn-JqQ" firstAttribute="top" secondItem="VMF-5h-bKo" secondAttribute="top" id="SoZ-PU-sdz"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="U3W-s9-UXt"/>
+                    <connections>
+                        <outlet property="infoLabelText" destination="Kz8-qn-JqQ" id="Vpm-KR-CtJ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2XV-l3-i5H" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1768.9453125" y="102.7818448023426"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="wFB-bd-nTc">
@@ -72,6 +146,9 @@
     </scenes>
     <resources>
         <image name="cart.badge.plus" catalog="system" width="128" height="106"/>
+        <image name="info.circle.fill" catalog="system" width="128" height="121"/>
+        <image name="pencil.and.outline" catalog="system" width="128" height="128"/>
+        <image name="trash.fill" catalog="system" width="121" height="128"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
