--- a/GroceryList/View/Base.lproj/Main.storyboard
+++ b/GroceryList/View/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="shoppingCell" textLabel="dLQ-zx-GQ6" style="IBUITableViewCellStyleDefault" id="JE3-b2-aKG">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleAspectFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="shoppingCell" textLabel="dLQ-zx-GQ6" style="IBUITableViewCellStyleDefault" id="JE3-b2-aKG" colorLabel="IBBuiltInLabel-Orange">
                                 <rect key="frame" x="0.0" y="24.333333969116211" width="414" height="43.666667938232422"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="JE3-b2-aKG" id="7cI-06-fPb">
@@ -33,6 +33,8 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <color key="backgroundColor" systemColor="systemFillColor"/>
+                                <color key="tintColor" systemColor="labelColor"/>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -43,17 +45,20 @@
                     <navigationItem key="navigationItem" title="Grocery Shopping List" id="bPF-jP-Ip7">
                         <leftBarButtonItems>
                             <barButtonItem title="Item" image="info.circle.fill" catalog="system" id="ujZ-hP-O40">
+                                <color key="tintColor" red="0.66610592603683472" green="0.090916730463504791" blue="0.38855192065238953" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
                                     <segue destination="LiT-x0-ihg" kind="show" identifier="infoLabel" id="hvc-7T-fRh"/>
                                 </connections>
                             </barButtonItem>
                             <barButtonItem title="Item" image="trash.fill" catalog="system" id="Z7Y-gs-nlc">
+                                <color key="tintColor" red="0.66610592603683472" green="0.090916730463504791" blue="0.38855192065238953" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
                                     <action selector="deleteAllItems:" destination="Iuc-RN-Lhe" id="NNp-J9-xVI"/>
                                 </connections>
                             </barButtonItem>
                         </leftBarButtonItems>
                         <barButtonItem key="rightBarButtonItem" title="Item" image="cart.badge.plus" catalog="system" id="LC3-9W-k7j">
+                            <color key="tintColor" red="0.66610592603683472" green="0.090916730463504791" blue="0.38855192065238953" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <connections>
                                 <action selector="addNewItem:" destination="Iuc-RN-Lhe" id="gNL-Ph-QZf"/>
                             </connections>
@@ -149,8 +154,14 @@
         <image name="info.circle.fill" catalog="system" width="128" height="121"/>
         <image name="pencil.and.outline" catalog="system" width="128" height="128"/>
         <image name="trash.fill" catalog="system" width="121" height="128"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemFillColor">
+            <color red="0.47058823529411764" green="0.47058823529411764" blue="0.50196078431372548" alpha="0.20000000000000001" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
